--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
                                 <h3>Nguyễn Văn Chung</h3>
                                 <div class="cp-social">
                                     <ul>
-                                        <li><a href="https://www.facebook.com/chungnguyen2602"><i class="fa-brands fa-facebook"></i></a>
+                                        <li><a href="https://www.facebook.com/chungnguyen2602"><i
+                                                    class="fa-brands fa-facebook"></i></a>
                                         </li>
-                                        <li><a href="https://www.facebook.com/chungnguyen2602"><i class="fa-brands fa-instagram"></i></a>
+                                        <li><a href="https://www.facebook.com/chungnguyen2602"><i
+                                                    class="fa-brands fa-instagram"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -179,9 +181,11 @@
                                 <h3>Cao Thị Sim</h3>
                                 <div class="cp-social">
                                     <ul>
-                                        <li><a href="https://www.facebook.com/xu.xu.3110567"><i class="fa-brands fa-facebook"></i></a>
+                                        <li><a href="https://www.facebook.com/xu.xu.3110567"><i
+                                                    class="fa-brands fa-facebook"></i></a>
                                         </li>
-                                        <li><a href="https://www.facebook.com/xu.xu.3110567"><i class="fa-brands fa-instagram"></i></a>
+                                        <li><a href="https://www.facebook.com/xu.xu.3110567"><i
+                                                    class="fa-brands fa-instagram"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -342,16 +346,17 @@
                                     <div class="expand-story">
                                         <div class="story-head wow fadeIn animated"
                                             style="visibility: visible; animation-name: fadeIn;">
-                                            <h3>Bạn có tin vào tình yêu online không?</h3>
-                                            <h6>December 12 2015</h6>
+                                            <h3>Tình yêu tuổi 17</h3>
                                         </div>
                                         <p class="wow fadeInRight animated"
-                                            style="visibility: visible; animation-name: fadeInRight;">Tôi đã từng không
-                                            tin vào tình yêu online. Đã từng nghĩ làm sao có thể thích một người chưa
-                                            từng gặp mặt? Vậy mà giờ đây tôi lại đang như vậy, bây giờ tôi đã hiểu: thế
-                                            giới ảo tình yêu thật đấy!!! Ngày ấy vu vơ đăng một dòng status trên
-                                            facebook than thở, vu vơ đùa giỡn nói chuyện với một người xa lạ chưa từng
-                                            quen. Mà nào hay biết, 4 năm sau người ấy lại là chồng mình.</p>
+                                            style="visibility: visible; animation-name: fadeInRight;">Người ta thường
+                                            nói tình yêu tuổi 17 như giấc mơ thanh xuân còn dang dở, có thể gặp đúng
+                                            người nhưng sai thời điểm. Nhưng với chúng ta, cả người và thời điểm có lẽ
+                                            đều đúng. Nó chẳng phải giấc mơ mà là cả hành trình thanh xuân. Người ta
+                                            cũng nói rằng Người bên bạn năm 17 tuổi sẽ không thể cùng bạn đi đến suốt
+                                            cuộc đời, nhưng suốt cuộc đời là bao lâu chẳng ai nói trước được, chúng ta
+                                            chỉ có thể khẳng định sẽ đi cùng nhau thật lâu, cùng trải qua những thăng
+                                            trầm cuộc sống, cùng nhau trưởng thành và cùng nhau già đi…</p>
                                     </div>
                                 </div>
                             </div>
@@ -371,17 +376,16 @@
                                     <div class="expand-story">
                                         <div class="story-head wow fadeIn animated"
                                             style="visibility: visible; animation-name: fadeIn;">
-                                            <h3>Lời tỏ tình dễ thương^^</h3>
-                                            <h6>August 04 2016</h6>
+                                            <h3>Ngày Cá Tháng Tư năm đó</h3>
+                                            <h6>April 01 2013</h6>
                                         </div>
                                         <p class="wow fadeInLeft animated"
-                                            style="visibility: visible; animation-name: fadeInLeft;">Ngày ấy, tôi 21!
-                                            Một mình giữa phố thị nấp tập. Mỗi chiều cuối tuần thường chạy xe vòng quanh
-                                            qua những con phố, len lỏi trong từng dòng người tấp nập. Hay thậm chí là
-                                            ghé vào một quán cà phê ven đường để ngồi đó và cảm nhận về cuộc sống của
-                                            riêng mình. Đôi khi lạc lõng và hơi cô đơn. Nhưng rồi một ngày đẹp trời,
-                                            người con trai ấy xuất hiện, nắm tay rồi thủ thỉ vào tai: “Hy vọng sau này
-                                            anh được làm những điều ấy cùng em”.</p>
+                                            style="visibility: visible; animation-name: fadeInLeft;">Tình yêu tuổi 17 ấy
+                                            chớm nở nhờ lời tỏ tình vu vơ nhân ngày Cá Tháng Tư năm 2013. Tưởng “vui
+                                            chơi qua đường” ai dè dính nhau cũng 10 năm có lẻ. Chúng ta yêu bằng những
+                                            cảm xúc dại khờ, những mới mẻ, vô lo vô nghĩ. Nói những lời thề non hẹn
+                                            biển, ước mơ về những điều xa xôi để rồi cùng nắm tay nhau vô Sài Gòn để
+                                            tiếp tục hành trình trưởng thành của cả hai.</p>
                                     </div>
                                 </div>
                             </div>
@@ -401,17 +405,16 @@
                                     <div class="expand-story">
                                         <div class="story-head wow fadeIn animated"
                                             style="visibility: visible; animation-name: fadeIn;">
-                                            <h3>Phút giây cầu hôn</h3>
-                                            <h6>May 10 2018</h6>
+                                            <h3>Mười năm</h3>
+                                            <h6>2013 - 2023</h6>
                                         </div>
                                         <p class="wow fadeInRight animated"
-                                            style="visibility: visible; animation-name: fadeInRight;">5 năm bên nhau
-                                            không phải là quãng thời gian quá dài, nhưng đủ cho chúng ta nhận ra được
-                                            rất nhiều điều. Yêu nhau, vun vén hạnh phúc và cùng nỗ lực vượt qua những
-                                            khó khăn trong cuộc sống. Chúng ta từ 2 con người xa lạ mà bước vào cuộc đời
-                                            nhau. Và giờ đây chúng ta tiếp tục cùng nhau sang trang mới. Giây phút anh
-                                            ngỏ lời “Làm vợ anh nhé!”, em đã nguyện ý đời này, đi đâu cũng được, miễn là
-                                            cùng anh.</p>
+                                            style="visibility: visible; animation-name: fadeInRight;">10 năm qua đi với
+                                            biết bao cung bậc cảm xúc, yêu mãnh liệt có, giận hờn có, thậm chí đôi lúc
+                                            cảm thấy chán
+                                            đối phương tới mức muốn buông tay. Ấy vậy mà bằng một thế lực vô hình nào
+                                            đó, chúng ta vẫn nắm tay nhau và sắp bước qua một cánh cửa mới của cuộc đời,
+                                            viết tiếp câu chuyện tình yêu tuổi 27 mà bao người nghĩ nó sẽ dang dở.</p>
                                     </div>
                                 </div>
                             </div>
@@ -431,16 +434,16 @@
                                     <div class="expand-story">
                                         <div class="story-head wow fadeIn animated"
                                             style="visibility: visible; animation-name: fadeIn;">
-                                            <h3>Ngày lễ đính hôn</h3>
-                                            <h6>July 28 2018</h6>
+                                            <h3>Ngày chung đôi</h3>
+                                            <h6>November 03 2024</h6>
                                         </div>
                                         <p class="wow fadeInLeft animated"
-                                            style="visibility: visible; animation-name: fadeInLeft;">“Tiếng trái tim đôi
-                                            ta đập thật nhanh. Thì thầm lời yêu thương. Ngày tình về chung đôi...” Sau
-                                            bao nhiêu chờ đợi, cuối cùng ngày vui của chúng ta cũng tới rồi. Cảm ơn vì
-                                            mình đã luôn là một phần trong cuộc sống của nhau. Em và anh không chỉ là
-                                            người yêu mà chúng ta còn là tri kỷ. Ngày hôm nay, em sẽ là cô dâu của anh
-                                            và sau này sẽ là mẹ của các con anh.</p>
+                                            style="visibility: visible; animation-name: fadeInLeft;">Cảm ơn chúng ta vì
+                                            đã là một phần thanh xuân của nhau, cảm ơn vì đã cùng nhau đi qua những giai
+                                            đoạn quan trọng của cuộc đời, cảm ơn vì đã trao cho nhau những điều tốt đẹp
+                                            nhất để khi tua lại thước phim 10 năm qua cả 2 vẫn luôn nở nụ cười và sắp
+                                            tới đây nụ cười sẽ rạng rỡ hơn nữa trong ngày trọng đại của chúng ta - ngày
+                                            mình về chung một nhà.</p>
                                     </div>
                                 </div>
                             </div>
