--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                         <div class="story-head wow fadeIn"
                                             style="visibility: hidden; animation-name: none;">
                                             <h3>Ngày chung đôi</h3>
-                                            <h6>November 03 2024</h6>
+                                            <h6>December 03 2023</h6>
                                         </div>
                                         <p class="wow fadeInRight"
                                             style="visibility: visible; animation-name: fadeInRight;">Cảm ơn chúng ta vì
@@ -542,7 +542,7 @@
                                         </ul>
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
-                                    <a class="text-center-sm" href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
+                                    <a class="text-center-sm" href="https://maps.app.goo.gl/jXMVTqYusvHcXDeY7"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
 
@@ -565,7 +565,7 @@
                                         </ul>
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
-                                    <a class="text-center-sm" href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
+                                    <a class="text-center-sm" href="https://maps.app.goo.gl/jXMVTqYusvHcXDeY7"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
 
@@ -588,7 +588,7 @@
                                         </ul>
                                     </div>
                                     <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
-                                    <a class="text-center-sm" href="https://maps.app.goo.gl/a5B3LbRH2rS81oYr5"
+                                    <a class="text-center-sm" href="https://maps.app.goo.gl/jXMVTqYusvHcXDeY7"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-7">
