--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chung &amp; Sim Wedding Invitation</title>
+    <title>Chung &amp; Sim Wedding Announcement</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
         content="Nguyễn Văn Chung &amp; Cao Thị Sim - Our wedding date: 2023-12-03 | Điều tuyệt vời nhất mà bạn từng học là yêu và được yêu để đáp lại">
     <meta name="keywords" content="Wedding,Nguyễn Văn Chung,Cao Thị Sim,Wedding website">
     <meta property="og:site_name" content="Nguyễn Văn Chung &amp; Cao Thị Sim">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Chung &amp; Sim Wedding Invitation">
+    <meta property="og:title" content="Chung &amp; Sim Wedding Announcement">
     <meta property="og:url" content="https://chungnguyen2602.github.io/chung-sim-wedding/">
     <meta property="og:description"
         content="Nguyễn Văn Chung &amp; Cao Thị Sim - Our wedding date: 2023-12-03 | Điều tuyệt vời nhất mà bạn từng học là yêu và được yêu để đáp lại">
@@ -23,7 +23,7 @@
     <meta property="og:image:secure_url"
         content="https://res.cloudinary.com/chungnguyen/image/upload/v1696603251/data/cs_wedding/xqitrmdft3hybhexudtq.jpg">
     <link rel="stylesheet" type="text/css" href="./resource/libs.css">
-    <link href="./resource/calendar.css" rel="stylesheet">
+    <link href="./resource/calendar.css" rel="stylesheet">  
     <link rel="stylesheet" type="text/css" href="./resource/style.css">
     <link rel="stylesheet" type="text/css" href="./resource/responsive.css">
     <link href="./resource/plugin.css" rel="stylesheet" type="text/css">
@@ -77,7 +77,7 @@
             <h3>We’re Getting Married!</h3>
             <h2><span>Chung</span> &amp; <span>Sim</span></h2>
             <div class="text-date">
-                <p>SAVE OUR DATE<span>03-12-2023</span></p>
+                <p>SAVE OUR DATE<span>14-01-2024</span></p>
             </div>
         </div>
 
@@ -98,8 +98,8 @@
                 </div>
 
                 <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="1" style="width: 1897px;">
-                    <div class="slide-inner slide-bg-image" data-background="./anhcuoi/MIN_5690.jpg"
-                        style="background-image: url(&quot;./anhcuoi/MIN_5690.jpg&quot;);">
+                    <div class="slide-inner slide-bg-image" data-background="./anhcuoi/MIN_5830_1.jpg"
+                        style="background-image: url(&quot;./anhcuoi/MIN_5830_1.jpg&quot;);">
                     </div>
                 </div>
 
@@ -471,7 +471,7 @@
                 <div class="col-sm-8 col-xs-12">
                     <div class="count-titles wow fadeInDown" style="visibility: hidden; animation-name: none;">
                         <h2>The big day</h2>
-                        <div id="clock" data-date="2023-12-03" data-text-day="Ngày" data-text-hour="Giờ"
+                        <div id="clock" data-date="2024-01-14" data-text-day="Ngày" data-text-hour="Giờ"
                             data-text-minute="Phút" data-text-second="Giây">
                             <div class="box">
                                 <div>
@@ -526,7 +526,7 @@
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <div class="event-stack wow fadeIn" style="visibility: hidden; animation-name: none;">
-                            <h3 class="text-center">LỄ ĂN HỎI</h3>
+                            <h3 class="text-center">LỄ CƯỚI</h3>
                             <div class="row">
                                 <div class="col-12 col-sm-12 col-md-5">
                                     <div class="image-wrap">
@@ -535,21 +535,22 @@
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-7">
                                     <div class="event-title text-center-sm">
-                                        <ul>
-                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i>2023-12-02
+                                        <ul style="display: flex; flex-direction: column; align-items: flex-start;">
+                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i>2023-12-03
                                             </li>
-                                            <li class="text-center"><i class="fa fa-clock-o"></i> 03:00 PM</li>
+                                            <li class="text-center"><i class="fa fa-map-marker"></i> Nam Định </li>
+                                            <li class="text-center">
+                                                <i class="fa-solid fa-video"></i> Xem đám cưới tụi mình ở video dưới
+                                                nhé<i class="fa-regular fa-face-grin-hearts"></i>
+                                            </li>
                                         </ul>
                                     </div>
-                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
-                                    <a class="text-center-sm" href="https://maps.app.goo.gl/jXMVTqYusvHcXDeY7"
-                                        target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
 
                             </div>
                         </div>
                         <div class="event-stack wow fadeIn" style="visibility: hidden; animation-name: none;">
-                            <h3 class="text-center">LỄ RƯỚC DÂU</h3>
+                            <h3 class="text-center">LỄ BÁO HỶ</h3>
                             <div class="row">
                                 <div class="col-12 col-sm-12 col-md-5">
                                     <div class="image-wrap">
@@ -558,20 +559,25 @@
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-7">
                                     <div class="event-title text-center-sm">
-                                        <ul>
-                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i>2023-12-03
+                                        <ul style="display: flex; flex-direction: column; align-items: flex-start;">
+                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i><b>14 - 01 -
+                                                    2024</b>
+                                            <li class="text-center"><i class="fa fa-clock-o"></i>Đón khách:<b> 17:30</b>
                                             </li>
-                                            <li class="text-center"><i class="fa fa-clock-o"></i> 09:00 AM</li>
+                                            <li class="text-center"><i class="fa fa-clock-o"></i>Khai tiệc:<b> 19:00</b>
+                                            </li>
+                                            <li class="text-center"><i class="fa fa-map-marker"></i> Nhà hàng <b>Five
+                                                    star Palace</b></li>
+                                            <li class="text-center"><i> 231 Nguyễn Thị Thập, Tân Phú, Quận 7</i></li>
                                         </ul>
                                     </div>
-                                    <p class="text-center-sm"><i class="fa fa-map-marker"></i> Tư gia nhà gái</p>
-                                    <a class="text-center-sm" href="https://maps.app.goo.gl/jXMVTqYusvHcXDeY7"
+                                    <a class="text-center-sm" href="https://maps.app.goo.gl/7foC7F9TZ9YPjYGk6"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
 
                             </div>
                         </div>
-                        <div class="event-stack wow fadeIn" style="visibility: hidden; animation-name: none;">
+                        <!-- <div class="event-stack wow fadeIn" style="visibility: hidden; animation-name: none;">
                             <h3 class="text-center">KHAI TIỆC</h3>
                             <div class="row">
                                 <div class="col-12 col-sm-12 col-md-5">
@@ -603,11 +609,11 @@
                                     <a class="text-center-sm" href="https://maps.app.goo.gl/TV6UdZ8fZ9ja7fwY9"
                                         target="_blank">Xem bản đồ <i class="fa fa-caret-right"></i></a>
                                 </div>
-                            </div>
-                        </div>
+                            </div> -->
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -637,6 +643,26 @@
         </div>
         <div class="seperator">
             <img src="./resource/layer-3.png" alt="seperator">
+        </div>
+    </section>
+
+    <section id="the-gallery" class="gallery wide-gallery section-padding">
+        <div class="container">
+            <div class="section-title wow fadeInDown" style="visibility: hidden; animation-name: none;">
+                <h2>Đám cưới tụi mình nè</h2>
+            </div>
+            <div class="row masonry-gallery" style="position: relative; height: 2042.56px;">
+                <div class="col-md-12 col-sm-12 col-xs-12 mix grid-item"
+                    style="position: absolute; left: 0%; top: 0px;">
+                    <div class="videowrapper">
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/woHXfReQoJY?si=VnWnDqRqgo6EkL1m"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
