--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                             <li class="text-center"><i class="fa fa-map-marker"></i> Nam Định </li>
                                             <li class="text-center">
                                                 <i class="fa-solid fa-video"></i> Xem đám cưới tụi mình ở video dưới
-                                                nhé<i class="fa-regular fa-face-grin-hearts"></i>
+                                                nhé <i class="fa-regular fa-face-grin-hearts"></i>
                                             </li>
                                         </ul>
                                     </div>
@@ -566,8 +566,7 @@
                                             </li>
                                             <li class="text-center"><i class="fa fa-clock-o"></i>Khai tiệc:<b> 19:00</b>
                                             </li>
-                                            <li class="text-center"><i class="fa fa-map-marker"></i> Nhà hàng <b>Five
-                                                    star Palace</b></li>
+                                            <li class="text-center"><i class="fa fa-map-marker"></i> Nhà hàng <b>Five Star Palace</b></li>
                                             <li class="text-center"><i> 231 Nguyễn Thị Thập, Tân Phú, Quận 7</i></li>
                                         </ul>
                                     </div>
