--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image:secure_url"
         content="https://res.cloudinary.com/chungnguyen/image/upload/v1696603251/data/cs_wedding/xqitrmdft3hybhexudtq.jpg">
     <link rel="stylesheet" type="text/css" href="./resource/libs.css">
-    <link href="./resource/calendar.css" rel="stylesheet">  
+    <link href="./resource/calendar.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./resource/style.css">
     <link rel="stylesheet" type="text/css" href="./resource/responsive.css">
     <link href="./resource/plugin.css" rel="stylesheet" type="text/css">
@@ -516,7 +516,7 @@
             </div>
             <div class="event-dates">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12">
+                    <div class="col-lg-5 col-md-12">
                         <div class="banner-event">
                             <div class="event-img wow fadeInLeft sticky"
                                 style="visibility: hidden; animation-name: none; position: absolute; top: 0px; bottom: auto;">
@@ -524,7 +524,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12">
+                    <div class="col-lg-7 col-md-12">
                         <div class="event-stack wow fadeIn" style="visibility: hidden; animation-name: none;">
                             <h3 class="text-center">LỄ CƯỚI</h3>
                             <div class="row">
@@ -564,9 +564,8 @@
                                                     2024</b>
                                             <li class="text-center"><i class="fa fa-clock-o"></i>Đón khách:<b> 17:30</b>
                                             </li>
-                                            <li class="text-center"><i class="fa fa-clock-o"></i>Khai tiệc:<b> 19:00</b>
-                                            </li>
-                                            <li class="text-center"><i class="fa fa-map-marker"></i> Nhà hàng <b>Five Star Palace</b></li>
+                                            <li class="text-center"><i class="fa fa-clock-o"></i>Khai tiệc:<b> 19:00</b></li>
+                                            <li class="text-center" style="text-align: left;"><i class="fa fa-map-marker"></i>Nhà hàng <b>Five Star Palace</b> - Sảnh <b>Crystal</b></li>
                                             <li class="text-center"><i> 231 Nguyễn Thị Thập, Tân Phú, Quận 7</i></li>
                                         </ul>
                                     </div>
