--- a/index.html
+++ b/index.html
@@ -536,11 +536,9 @@
                                 <div class="col-12 col-sm-12 col-md-7">
                                     <div class="event-title text-center-sm">
                                         <ul style="display: flex; flex-direction: column; align-items: flex-start;">
-                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i>2023-12-03
-                                            </li>
+                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i><b> 03 - 12 - 2023</b></li>
                                             <li class="text-center"><i class="fa fa-map-marker"></i> Nam Định </li>
-                                            <li class="text-center">
-                                                <i class="fa-solid fa-video"></i> Xem đám cưới tụi mình ở video dưới
+                                            <li class="text-center" style="text-align: left;"><i class="fa-solid fa-video"></i> Xem đám cưới tụi mình ở video dưới
                                                 nhé <i class="fa-regular fa-face-grin-hearts"></i>
                                             </li>
                                         </ul>
@@ -560,12 +558,12 @@
                                 <div class="col-12 col-sm-12 col-md-7">
                                     <div class="event-title text-center-sm">
                                         <ul style="display: flex; flex-direction: column; align-items: flex-start;">
-                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i><b>14 - 01 -
+                                            <li class="text-center"><i class="fa fa-calendar-check-o"></i><b> 14 - 01 -
                                                     2024</b>
-                                            <li class="text-center"><i class="fa fa-clock-o"></i>Đón khách:<b> 17:30</b>
+                                            <li class="text-center"><i class="fa fa-clock-o"></i> Đón khách:<b> 17:30</b>
                                             </li>
-                                            <li class="text-center"><i class="fa fa-clock-o"></i>Khai tiệc:<b> 19:00</b></li>
-                                            <li class="text-center" style="text-align: left;"><i class="fa fa-map-marker"></i>Nhà hàng <b>Five Star Palace</b> - Sảnh <b>Crystal</b></li>
+                                            <li class="text-center"><i class="fa fa-clock-o"></i> Khai tiệc:<b> 19:00</b></li>
+                                            <li class="text-center" style="text-align: left;"><i class="fa fa-map-marker"></i> Nhà hàng <b>Five Star Palace</b> - Sảnh <b>Crystal</b></li>
                                             <li class="text-center"><i> 231 Nguyễn Thị Thập, Tân Phú, Quận 7</i></li>
                                         </ul>
                                     </div>
